[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Sprites/Survivor1.png" type="Texture" id=2]
[ext_resource path="res://Player/Sprites/Survivor2.png" type="Texture" id=3]
[ext_resource path="res://Player/Sprites/Survivor3.png" type="Texture" id=4]
[ext_resource path="res://Player/Sprites/SurvivorUnarmed1.png" type="Texture" id=5]
[ext_resource path="res://Player/Sprites/SurvivorUnarmed2.png" type="Texture" id=6]
[ext_resource path="res://Player/Sprites/SurvivorUnarmed3.png" type="Texture" id=7]
[ext_resource path="res://Player/Scenes/Rifle.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Sounds/forest_step.wav" type="AudioStream" id=9]
[ext_resource path="res://Player/Sounds/waterfootstep.wav" type="AudioStream" id=10]
[ext_resource path="res://Player/Sounds/packaway.wav" type="AudioStream" id=11]
[ext_resource path="res://Player/Sounds/eat.wav" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "movingRifle",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "movingUnarmed",
"speed": 8.0
} ]

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "movingUnarmed"
frame = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 4.84559, -13.856, 5.7674, -12.0123, 5.83324, -10.3663, 5.89909, -8.65432, 5.96493, -6.15226, 5.10896, -4.50617, 4.253, -2.39918, 4.77975, -2.1358, 7.01843, -0.818931, 7.74271, 0.0370362, 8.92789, 1.02469, 9.05958, 6.95062, 8.13777, 7.87243, 7.08427, 8.86008, 5.96493, 9.71605, 4.97728, 13.8642, -2.9898, 13.93, -3.84577, 10.9671, -3.91161, 9.97942, -2.85811, 9.91358, -2.85811, -1.08231, -2.19968, -2.79424, -2.92396, -3.12346, -3.97746, -4.04527, -4.0433, -5.95473, -2.92396, -6.94239, -3.77993, -7.99589, -4.0433, -8.98354, -2.92396, -10.7613, -2.9898, -11.9465, -2.00215, -12.8025, -1.01449, -13.5926, 0.0390046, -14.8436, 0.894972, -14.9095, 2.87028, -14.9095 )

[node name="Hands" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( -1.75583, 1.0535 )
__meta__ = {
"_edit_group_": true
}

[node name="Rifle" parent="Hands" instance=ExtResource( 8 )]
position = Vector2( -3.40131e-008, 5.49442e-008 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
current = true
limit_left = -3200
limit_top = -3200
limit_right = 3200
limit_bottom = 3200
limit_smoothed = true
smoothing_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="FootstepGrass" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="FootstepWater" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 1.0

[node name="ItemPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0

[node name="Chew" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="HungerTimer" type="Timer" parent="."]

[node name="DamagedTimer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="FootstepGrass" to="." method="_on_Footstep_finished"]
[connection signal="finished" from="FootstepWater" to="." method="_on_FootstepWater_finished"]
[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
[connection signal="timeout" from="DamagedTimer" to="." method="_on_DamagedTimer_timeout"]
